vendor/proc-macro-error-1.0.4/tests/ui/children_messages.rs
extern crate test_crate;
use test_crate::*;

children_messages!(one, two, three, four);

fn main() {}
